--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-  <title>Local Video Player (iOS) — Overlay / Native Fullscreen Toggle</title>
+  <title>iOS Local Video Player — Big File Fallback</title>
   <style>
     :root { color-scheme: light dark; }
     body {
@@ -13,44 +13,33 @@
       line-height: 1.35;
     }
     h1 { font-size: 20px; margin: 0 0 10px; }
-    .note { font-size: 13px; opacity: 0.82; margin: 8px 0 14px; max-width: 860px; }
-    .row { display: flex; gap: 12px; flex-wrap: wrap; align-items: center; }
-    input[type="file"], button, label { font-size: 16px; }
-    button {
+    .note { font-size: 13px; opacity: 0.82; margin: 8px 0 14px; max-width: 920px; }
+    .row { display: flex; gap: 10px; flex-wrap: wrap; align-items: center; }
+    input[type="file"], button, a.btn { font-size: 16px; }
+    button, a.btn {
       padding: 10px 14px;
       border-radius: 10px;
       border: 1px solid rgba(127,127,127,0.35);
       background: transparent;
       cursor: pointer;
       -webkit-tap-highlight-color: transparent;
+      color: inherit;
+      text-decoration: none;
+      display: inline-block;
     }
-    button:disabled { opacity: 0.5; cursor: not-allowed; }
-    .toggle {
-      display: inline-flex;
-      align-items: center;
-      gap: 8px;
-      padding: 8px 10px;
-      border-radius: 10px;
-      border: 1px solid rgba(127,127,127,0.25);
-    }
+    button:disabled, a.btn.disabled { opacity: 0.5; cursor: not-allowed; pointer-events: none; }
 
     #player {
       position: relative;
       width: 100%;
-      max-width: 860px;
+      max-width: 920px;
       margin-top: 14px;
       border-radius: 14px;
       overflow: hidden;
       border: 1px solid rgba(127,127,127,0.25);
       background: #000;
     }
-
-    video {
-      display: block;
-      width: 100%;
-      height: auto;
-      background: #000;
-    }
+    video { display: block; width: 100%; height: auto; background: #000; }
 
     #overlay {
       position: absolute;
@@ -70,23 +59,20 @@
       position: absolute;
       bottom: 12px;
       left: 12px;
+      right: 12px;
       z-index: 10;
-      padding: 6px 8px;
+      padding: 8px 10px;
       border-radius: 10px;
       background: rgba(0,0,0,0.45);
       color: #fff;
-      font-size: 13px;
+      font-size: 12px;
       pointer-events: none;
       user-select: none;
       display: none;
-      white-space: nowrap;
-      max-width: calc(100vw - 24px);
-      overflow: hidden;
-      text-overflow: ellipsis;
+      white-space: pre-wrap;
     }
     #player.show-status #status { display: block; }
 
-    /* Fake fullscreen (overlay-visible mode) */
     #player.fake-fullscreen {
       position: fixed;
       inset: 0;
@@ -100,11 +86,7 @@
       z-index: 9999;
       background: #000;
     }
-    #player.fake-fullscreen video {
-      width: 100%;
-      height: 100%;
-      object-fit: contain;
-    }
+    #player.fake-fullscreen video { width: 100%; height: 100%; object-fit: contain; }
 
     #exitBtn {
       position: absolute;
@@ -122,39 +104,43 @@
     }
     #player.fake-fullscreen #exitBtn { display: block; }
 
-    .meta { margin-top: 10px; font-size: 13px; opacity: 0.85; max-width: 860px; }
+    .meta { margin-top: 10px; font-size: 13px; opacity: 0.9; max-width: 920px; }
+    .warn {
+      margin-top: 10px;
+      padding: 10px 12px;
+      border-radius: 12px;
+      border: 1px solid rgba(255,165,0,0.35);
+      background: rgba(255,165,0,0.12);
+      max-width: 920px;
+      display: none;
+      font-size: 13px;
+    }
+    .warn.show { display: block; }
+    .mono { font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", monospace; }
   </style>
 </head>
 
 <body>
-  <h1>Local Video Player (iOS)</h1>
+  <h1>iOS Local Video Player</h1>
 
   <div class="note">
-    If your Insta360 1080p MP4 buffers forever with <b>ahead≈0.1s</b> in <b>overlay mode</b>, it usually means iOS Safari
-    can’t keep decoding/feeding the file in <b>inline</b> playback (often due to HEVC/high bitrate/variable frame-rate).
-    Use the toggle below to test <b>Native Fullscreen (best playback)</b>. Native fullscreen can’t show HTML overlay.
+    This page plays a picked local video. If the file is very large, iOS browsers can freeze when playing via HTML <span class="mono">&lt;video&gt;</span>
+    from a <span class="mono">blob:</span> URL. In that case, use <b>Open in system viewer</b> (no HTML overlay) or re-export a smaller “web friendly” version.
   </div>
 
   <div class="row">
     <input id="picker" type="file" accept="video/*" />
-    <button id="playBtn" disabled>Play</button>
-
-    <label class="toggle">
-      <input id="nativeToggle" type="checkbox" />
-      <span>Native Fullscreen (best playback)</span>
-    </label>
+    <button id="playOverlayBtn" disabled>Fullscreen (with telemetry)</button>
+    <a id="openExternal" class="btn disabled" href="#" target="_blank" rel="noopener">Open in system viewer</a>
   </div>
 
-  <!-- Scroll shim used briefly to collapse iOS browser bars in overlay mode -->
-  <div id="scrollShim" aria-hidden="true" style="height:0;"></div>
+  <div id="warn" class="warn"></div>
 
   <div id="player" aria-label="Video player">
     <div id="overlay">telemetry</div>
-    <div id="status">buffering…</div>
-    <button id="exitBtn" type="button" aria-label="Exit overlay fullscreen">Done</button>
-
-    <!-- Start in overlay-friendly inline mode. If user selects native mode, we remove playsinline at runtime. -->
-    <video id="video" controls playsinline webkit-playsinline preload="auto"></video>
+    <div id="status"></div>
+    <button id="exitBtn" type="button" aria-label="Exit fullscreen">Done</button>
+    <video id="video" controls playsinline webkit-playsinline preload="metadata"></video>
   </div>
 
   <div id="meta" class="meta"></div>
@@ -163,23 +149,19 @@
     const picker = document.getElementById("picker");
     const player = document.getElementById("player");
     const video  = document.getElementById("video");
-    const playBtn  = document.getElementById("playBtn");
+    const playOverlayBtn  = document.getElementById("playOverlayBtn");
+    const openExternal = document.getElementById("openExternal");
     const exitBtn = document.getElementById("exitBtn");
     const meta = document.getElementById("meta");
-    const scrollShim = document.getElementById("scrollShim");
     const statusEl = document.getElementById("status");
-    const nativeToggle = document.getElementById("nativeToggle");
+    const warnEl = document.getElementById("warn");
 
+    // Keep a strong reference to the File to avoid iOS GC/handle weirdness on large files.
+    let currentFile = null;
     let currentUrl = null;
-    let inOverlayFs = false;
 
-    function bytesToHuman(n) {
-      if (!Number.isFinite(n)) return "";
-      const units = ["B","KB","MB","GB","TB"];
-      let i = 0;
-      while (n >= 1024 && i < units.length - 1) { n /= 1024; i++; }
-      return `${n.toFixed(i === 0 ? 0 : 2)} ${units[i]}`;
-    }
+    let inOverlayFs = false;
+    let tickTimer = null;
 
     function setVhVar() {
       const vh = window.innerHeight * 0.01;
@@ -188,38 +170,12 @@
     setVhVar();
     window.addEventListener("resize", setVhVar);
 
-    // Prevent scroll only during overlay fullscreen (keeps UI stable)
-    function preventScroll(e) {
-      if (inOverlayFs) e.preventDefault();
-    }
-    document.addEventListener("touchmove", preventScroll, { passive: false });
-
-    function collapseBrowserUIOnce() {
-      scrollShim.style.height = "200vh";
-      window.scrollTo(0, 0);
-      requestAnimationFrame(() => {
-        requestAnimationFrame(() => {
-          window.scrollTo(0, 1);
-          setTimeout(() => {
-            scrollShim.style.height = "0";
-            window.scrollTo(0, 0);
-          }, 350);
-        });
-      });
-    }
-
-    function enterOverlayFullscreen() {
-      inOverlayFs = true;
-      player.classList.add("fake-fullscreen");
-      collapseBrowserUIOnce();
-    }
-
-    function exitOverlayFullscreen() {
-      inOverlayFs = false;
-      player.classList.remove("fake-fullscreen");
-      player.classList.remove("show-status");
-      scrollShim.style.height = "0";
-      window.scrollTo(0, 0);
+    function bytesToHuman(n) {
+      if (!Number.isFinite(n)) return "";
+      const units = ["B","KB","MB","GB","TB"];
+      let i = 0;
+      while (n >= 1024 && i < units.length - 1) { n /= 1024; i++; }
+      return `${n.toFixed(i === 0 ? 0 : 2)} ${units[i]}`;
     }
 
     function bufferAheadSeconds() {
@@ -234,34 +190,76 @@
       return 0;
     }
 
-    function updateStatus(text) {
-      statusEl.textContent = text;
-      player.classList.add("show-status");
-    }
-    function hideStatus() {
-      player.classList.remove("show-status");
+    function errText() {
+      const e = video.error;
+      if (!e) return "none";
+      const code = e.code; // 1 ABORTED, 2 NETWORK, 3 DECODE, 4 SRC_NOT_SUPPORTED
+      const map = {1:"ABORTED",2:"NETWORK",3:"DECODE",4:"SRC_NOT_SUPPORTED"};
+      return `${code} (${map[code] || "?"})`;
     }
 
-    // Best-effort recover
-    let recoverTimer = null;
-    function scheduleRecover() {
-      clearTimeout(recoverTimer);
-      recoverTimer = setTimeout(async () => {
-        try {
-          if (video.paused) return;
-          await video.play();
-        } catch (_) {}
-      }, 500);
+    function stateText(prefix = "") {
+      const line = `t=${video.currentTime.toFixed(2)}s | ahead=${bufferAheadSeconds().toFixed(2)}s | ready=${video.readyState} | net=${video.networkState} | err=${errText()}`;
+      return prefix ? `${prefix}\n${line}` : line;
+    }
+
+    function showStatus(on) {
+      if (on) player.classList.add("show-status");
+      else player.classList.remove("show-status");
+    }
+
+    function startTick() {
+      stopTick();
+      showStatus(true);
+      tickTimer = setInterval(() => {
+        statusEl.textContent = stateText();
+      }, 250);
+    }
+    function stopTick() {
+      if (tickTimer) clearInterval(tickTimer);
+      tickTimer = null;
+    }
+
+    function preventScroll(e) {
+      if (inOverlayFs) e.preventDefault();
+    }
+    document.addEventListener("touchmove", preventScroll, { passive: false });
+
+    function enterOverlayFullscreen() {
+      inOverlayFs = true;
+      player.classList.add("fake-fullscreen");
+    }
+    function exitOverlayFullscreen() {
+      inOverlayFs = false;
+      player.classList.remove("fake-fullscreen");
+      showStatus(false);
+    }
+
+    function enableExternalLink(url) {
+      openExternal.href = url;
+      openExternal.classList.remove("disabled");
+    }
+    function disableExternalLink() {
+      openExternal.href = "#";
+      openExternal.classList.add("disabled");
+    }
+
+    function setWarning(text, show) {
+      warnEl.textContent = text || "";
+      warnEl.classList.toggle("show", !!show);
     }
 
     picker.addEventListener("change", () => {
       const file = picker.files && picker.files[0];
       if (!file) return;
 
+      // Keep file ref
+      currentFile = file;
+
       if (currentUrl) URL.revokeObjectURL(currentUrl);
       currentUrl = URL.createObjectURL(file);
 
-      // Reset video element to clear any stuck state
+      // Reset element to clear any stuck decoder state
       video.pause();
       video.removeAttribute("src");
       video.load();
@@ -269,70 +267,45 @@
       video.src = currentUrl;
       video.load();
 
-      playBtn.disabled = false;
+      playOverlayBtn.disabled = false;
+      enableExternalLink(currentUrl);
 
       const type = file.type || "unknown";
-      meta.textContent = `Selected: ${file.name} • ${bytesToHuman(file.size)} • ${type}`;
+      meta.innerHTML = `Selected: <span class="mono">${file.name}</span> • ${bytesToHuman(file.size)} • <span class="mono">${type}</span>`;
+
+      // Big-file hint
+      const BIG = 500 * 1024 * 1024; // 500 MB heuristic
+      if (file.size >= BIG) {
+        setWarning(
+          `Large file detected (${bytesToHuman(file.size)}). If playback freezes in the browser, try “Open in system viewer” or re-export the clip to a smaller bitrate / web-friendly format.`,
+          true
+        );
+      } else {
+        setWarning("", false);
+      }
+
+      statusEl.textContent = stateText();
+      showStatus(true);
     });
 
-    async function playNativeFullscreen() {
-      // Native fullscreen: better decoder path on iOS, but overlay cannot show.
-      // Remove playsinline flags (some iOS versions still allow fullscreen even if present,
-      // but removing helps push native mode).
-      video.removeAttribute("playsinline");
-      video.removeAttribute("webkit-playsinline");
-
-      // Start playback first (user gesture); then request iOS fullscreen if possible.
-      await video.play();
-
-      if (video.webkitEnterFullscreen) {
-        try { video.webkitEnterFullscreen(); } catch (_) {}
-      }
-    }
-
-    async function playOverlayMode() {
-      // Ensure inline flags are present for overlay mode
-      video.setAttribute("playsinline", "");
-      video.setAttribute("webkit-playsinline", "");
-      enterOverlayFullscreen();
-      await video.play();
-    }
-
-    playBtn.addEventListener("click", async () => {
+    playOverlayBtn.addEventListener("click", async () => {
       try {
-        if (nativeToggle.checked) {
-          // Ensure we are not in overlay fullscreen
-          exitOverlayFullscreen();
-          await playNativeFullscreen();
-        } else {
-          await playOverlayMode();
-        }
+        enterOverlayFullscreen();
+        startTick();
+        await video.play();
       } catch (e) {
         console.log("Play blocked:", e);
       }
     });
 
     exitBtn.addEventListener("click", () => exitOverlayFullscreen());
-    video.addEventListener("ended", () => exitOverlayFullscreen());
 
-    // Buffer diagnostics
-    video.addEventListener("waiting", () => {
-      const ahead = bufferAheadSeconds().toFixed(1);
-      updateStatus(`buffering… ahead=${ahead}s`);
-      scheduleRecover();
-    });
-    video.addEventListener("stalled", () => {
-      const ahead = bufferAheadSeconds().toFixed(1);
-      updateStatus(`stalled… ahead=${ahead}s`);
-      scheduleRecover();
-    });
-    video.addEventListener("playing", () => hideStatus());
-    video.addEventListener("canplay", () => hideStatus());
-    video.addEventListener("pause", () => hideStatus());
-
-    window.addEventListener("orientationchange", () => {
-      setTimeout(() => setVhVar(), 200);
-    });
+    // Events
+    video.addEventListener("playing", () => { statusEl.textContent = stateText("playing"); });
+    video.addEventListener("waiting", () => { statusEl.textContent = stateText("waiting…"); });
+    video.addEventListener("stalled", () => { statusEl.textContent = stateText("stalled…"); });
+    video.addEventListener("error", () => { statusEl.textContent = stateText("error!"); });
+    video.addEventListener("ended", () => { stopTick(); exitOverlayFullscreen(); });
 
     window.addEventListener("beforeunload", () => {
       if (currentUrl) URL.revokeObjectURL(currentUrl);
